welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:9: error: '(' expected but identifier found.
  if estAdo(a)==true {compteur=compteur+1}
     ^hasTeen:10: error: '(' expected but identifier found.
  if estAdo(b)==true {compteur=compteur+1}
     ^hasTeen:11: error: '(' expected but identifier found.
  if estAdo(c)==true {compteur=compteur+1}
     ^hasTeen:12: error: '(' expected but identifier found.
  if compteur >=2 {
     ^hasTeen:15: error: illegal start of simple expression
}
^